--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "build": "npx tsc",
     "start": "tsc && node dist/index.js",
-    "dev": "tsc -w & nodemon -q -w dist dist/index.js"
+    "dev": "tsc -w & nodemon -q -w dist dist/index.js",
+    "generate": "drizzle-kit generate",
+    "migrate": "drizzle-kit migrate"
   },
   "repository": {
     "type": "git",
@@ -21,12 +23,23 @@
   },
   "homepage": "https://github.com/GuillemotClement/Pomotask#readme",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.3",
+    "@types/pg": "^8.11.14",
+    "drizzle-kit": "^0.31.0",
     "nodemon": "^3.1.10",
+    "tsx": "^4.19.4",
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "drizzle-orm": "^0.43.1",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.15.6"
   }
 }
